--- a/post.hbs
+++ b/post.hbs
@@ -1,180 +1,169 @@
 {{!< default}}
 
 {{!-- The tag above means: insert everything in this file
-into the {body} of the default.hbs template --}}
+into the {body} tag of the default.hbs template --}}
 
-<header class="site-header outer">
-    <div class="inner">
-        {{> "site-nav"}}
-    </div>
-</header>
 
-{{!-- Everything inside the #post tags pulls data from the post --}}
 {{#post}}
+{{!-- Everything inside the #post block pulls data from the post --}}
 
-<main id="site-main" class="site-main outer">
-    <div class="inner">
+<article class="article {{post_class}}">
 
-        <article class="post-full {{post_class}} {{#unless feature_image}}no-image{{/unless}}">
+    <header class="article-header gh-canvas">
 
-            <header class="post-full-header">
-                <section class="post-full-meta">
-                    <time class="post-full-meta-date" datetime="{{date format="YYYY-MM-DD"}}">{{date format="YYYY-MM-DD h:mma"}}</time>
-                    <span class="date-divider">・</span> 
-                    <span class="reading-time">{{reading_time}}</span>
-                </section>
-                <h1 class="post-full-title">{{title}}</h1>
-                
-                <div class="post-full-header-tags">
-                {{#tags}}
-                    <a href="{{url}}">{{name}}</a>
-                {{/tags}}
-                </div>
-            </header>
+        {{#if primary_tag}}
+        <section class="article-tag">
+            <a href="{{primary_tag.url}}">{{primary_tag.name}}</a>
+        </section>
+        {{/if}}
 
-            {{#if feature_image}}
-            <figure class="post-full-image">
-                {{!-- This is a responsive image, it loads different sizes depending on device
-                https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 --}}
-                <img
-                    srcset="{{img_url feature_image size="s"}} 300w,
-                            {{img_url feature_image size="m"}} 600w,
-                            {{img_url feature_image size="l"}} 1000w,
-                            {{img_url feature_image size="xl"}} 2000w"
-                    sizes="(max-width: 800px) 400px,
-                            (max-width: 1170px) 700px,
-                            1400px"
-                    src="{{img_url feature_image size="xl"}}"
-                    alt="{{title}}"
-                />
-            </figure>
-            {{/if}}
+        <h1 class="article-title">{{title}}</h1>
 
-            <section class="post-full-content">
+        {{#if custom_excerpt}}
+        <p class="article-excerpt">{{custom_excerpt}}</p>
+        {{/if}}
 
-                <div class="fb-likebox">
-                    {{!-- FB 讚方塊，需要在 default.hbs 的 body 後面也加上原始碼 --}}
-                    先幫忙按一下：
-                    <div class="fb-like" data-href="{{url absolute="true"}}" data-width="" data-layout="button_count" data-action="like" data-size="large" data-show-faces="true" data-share="false"></div>
-                </div>  
-                <div class="post-content">
-                    {{content}}
-                </div>
-
-                <hr>
-
-                <div class="fb-likebox">
-                    {{!-- FB 讚方塊，需要在 default.hbs 的 body 後面也加上原始碼 --}}
-                    如果你喜歡這篇文章，請幫我按個讚：
-                    <div class="fb-like" data-href="{{url absolute="true"}}" data-width="" data-layout="button_count" data-action="like" data-size="large" data-show-faces="true" data-share="false"></div>
-                </div> 
-            </section>
-
-            <footer class="post-full-footer">
-
-                {{!-- There are two options for how we display the byline/author-info.
-                If the post has more than one author, we load a specific template
-                from includes/byline-multiple.hbs, otherwise, we just use the
-                default byline. --}}
-
-                {{#has author="count:>1"}}
-                    {{> "byline-multiple"}}
-                {{else}}
-                    {{> "byline-single"}}
-                {{/has}}
-
-            </footer>
-
-            
-
-           
-            <section class="post-full-comments">
-                
-                <div id="disqus_thread"></div>
-                <script>
-                var disqus_config = function () {
-                    this.page.url = "{{url absolute="true"}}";  
-                    this.page.identifier = "ghost-{{comment_id}}"
-                };
-                (function() {
-                var d = document, s = d.createElement('script');
-                s.src = 'https://hanamizuki.disqus.com/embed.js';
-                s.setAttribute('data-timestamp', +new Date());
-                (d.head || d.body).appendChild(s);
-                })();
-                </script>
-
-            </section>
-
-
-            {{!-- Email subscribe form at the bottom of the page --}}
-            {{#if @labs.subscribers}}
-            <section class="subscribe-form">
-                <h3 class="subscribe-form-title">訂閱{{@site.title}}</h3>
-                <p>如果你喜歡這篇文章，歡迎訂閱我的文章，第一時間通知你喔！</p>
-                {{subscribe_form placeholder="name@gmail.com"}}
-            </section>
-            {{/if}}
-          
-
-        </article>
-
-    </div>
-</main>
-
-{{!-- Links to Previous/Next posts --}}
-<aside class="read-next outer">
-    <div class="inner">
-        <div class="read-next-feed">
-            {{#if primary_tag}}
-            {{#get "posts" filter="tags:{{primary_tag.slug}}+id:-{{id}}" limit="3" as |related_posts|}}
-                {{#if related_posts}}
-                <article class="read-next-card"
-                    {{#if ../primary_tag.feature_image}}
-                        style="background-image: url({{img_url ../primary_tag.feature_image size="m"}})"
-                    {{else}}
-                        {{#if @site.cover_image}}
-                            style="background-image: url({{img_url @site.cover_image size="m"}})"{{/if}}
-                    {{/if}}
-                >
-                    <header class="read-next-card-header">
-                        <small class="read-next-card-header-sitetitle">&mdash; {{@site.title}} &mdash;</small>
-                        {{#../primary_tag}}
-                        <h3 class="read-next-card-header-title"><a href="{{url}}">{{name}}</a></h3>
-                        {{/../primary_tag}}
-                    </header>
-                    <div class="read-next-divider">{{> "icons/infinity"}}</div>
-                    <div class="read-next-card-content">
-                        <ul>
-                            {{#foreach related_posts}}
-                            <li><a href="{{url}}">{{title}}</a></li>
-                            {{/foreach}}
-                        </ul>
+        <div class="article-byline">
+            <section class="article-byline-content">
+                <ul class="author-list">
+                    {{#foreach authors}}
+                    <li class="author-list-item">
+                        {{#if profile_image}}
+                        <a href="{{url}}" class="author-avatar">
+                            <img class="author-profile-image" src="{{img_url profile_image size="xs"}}" alt="{{name}}" />
+                        </a>
+                        {{else}}
+                        <a href="{{url}}" class="author-avatar author-profile-image">{{> "icons/avatar"}}</a>
+                        {{/if}}
+                    </li>
+                    {{/foreach}}
+                </ul>
+                <div class="article-byline-meta">
+                    <h4 class="author-name">{{authors}}</h4>
+                    <div class="byline-meta-content">
+                        <time class="byline-meta-date" datetime="{{date format="YYYY-MM-DD"}}">{{date}}</time>
+                        <span class="byline-reading-time"><span class="bull">&bull;</span> {{reading_time}}</span>
                     </div>
-                    <footer class="read-next-card-footer">
-                        <a href="{{#../primary_tag}}{{url}}{{/../primary_tag}}">{{plural meta.pagination.total empty='No posts' singular='% post' plural='See all % posts'}} →</a>
-                    </footer>
-                </article>
-                {{/if}}
-            {{/get}}
-            {{/if}}
-
-            {{!-- If there's a next post, display it using the same markup included from - partials/post-card.hbs --}}
-            {{#next_post}}
-                {{> "post-card"}}
-            {{/next_post}}
-
-            {{!-- If there's a previous post, display it using the same markup included from - partials/post-card.hbs --}}
-            {{#prev_post}}
-                {{> "post-card"}}
-            {{/prev_post}}
-
+                </div>
+            </section>
         </div>
+
+        {{#if feature_image}}
+        <figure class="article-image">
+            {{!-- This is a responsive image, it loads different sizes depending on device
+            https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 --}}
+            <img
+                srcset="{{img_url feature_image size="s"}} 300w,
+                        {{img_url feature_image size="m"}} 600w,
+                        {{img_url feature_image size="l"}} 1000w,
+                        {{img_url feature_image size="xl"}} 2000w"
+                sizes="(min-width: 1400px) 1400px, 92vw"
+                src="{{img_url feature_image size="xl"}}"
+                alt="{{title}}"
+            />
+        </figure>
+        {{/if}}
+    </header>
+
+    <section class="gh-content gh-canvas">
+        <div class="fb-likebox">
+            {{!-- FB 讚方塊，需要在 default.hbs 的 body 後面也加上原始碼 --}}
+            先幫忙按一下：
+            <div class="fb-like" data-href="{{url absolute="true"}}" data-width="" data-layout="button_count" data-action="like" data-size="large" data-show-faces="true" data-share="false"></div>
+        </div> 
+
+        <div class="post-content">
+            {{content}}
+        </div>
+
+        <hr>
+
+        <div class="fb-likebox">
+            {{!-- FB 讚方塊，需要在 default.hbs 的 body 後面也加上原始碼 --}}
+            如果你喜歡這篇文章，請幫我按個讚：
+            <div class="fb-like" data-href="{{url absolute="true"}}" data-width="" data-layout="button_count" data-action="like" data-size="large" data-show-faces="true" data-share="false"></div>
+        </div> 
+    </section>
+
+    {{!--
+    <section class="article-comments gh-canvas">
+        If you want to embed comments, this is a good place to paste your code!
+    </section>
+    --}}
+
+</article>
+
+{{!-- A signup call to action is displayed here, unless viewed as a logged-in member --}}
+{{#unless @member}}
+<section class="footer-cta">
+    <div class="inner">
+        <h2>如果你喜歡這篇文章，訂閱將能在第一時間收到通知：</h2>
+        <a class="footer-cta-button" href="#/portal">
+            <div>輸入你的 Email</div>
+            <span>訂閱</span>
+        </a>
+        {{!-- ^ This looks like a form element, but it's just a link to Portal,
+        making the form validation and submission much simpler. --}}
+    </div>
+</section>
+{{/unless}}
+
+
+{{!-- Read more links, just above the footer --}}
+<aside class="read-more-wrap">
+    <div class="read-more inner">
+
+        {{!-- The {#get} helper below fetches some of the latest posts here
+        so that people have something else to read when they finish this one.
+
+        This query gets the latest 3 posts on the site, but adds a filter to
+        exclude the post we're currently on from being included. --}}
+
+        {{#get "posts" filter="id:-{{id}}" include="authors" limit="3" as |more_posts|}}
+            {{#if more_posts}}
+                {{#foreach more_posts}}
+                    {{> "post-card"}}
+                {{/foreach}}
+            {{/if}}
+        {{/get}}
+
     </div>
 </aside>
 
+<!-- 以下是從之前 Ghost 複製過來的 -->
+
 {{!-- Floating header which appears on-scroll, included from includes/floating-header.hbs --}}
-{{> floating-header}}
+<div class="floating-header">
+    <div class="floating-header-logo">
+        <a href="{{@site.url}}">
+            {{#if @site.icon}}
+                <img src="{{img_url @site.icon size="xxs"}}" alt="{{@site.title}} icon" />
+            {{/if}}
+            <span>{{@site.title}}</span>
+        </a>
+    </div>
+    <span class="floating-header-divider">&mdash;</span>
+    <div class="floating-header-title">{{title}}</div>
+    <div class="floating-header-share">
+        <div class="floating-header-share-label">把文章分享給你的朋友 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M7.5 15.5V4a1.5 1.5 0 1 1 3 0v4.5h2a1 1 0 0 1 1 1h2a1 1 0 0 1 1 1H18a1.5 1.5 0 0 1 1.5 1.5v3.099c0 .929-.13 1.854-.385 2.748L17.5 23.5h-9c-1.5-2-5.417-8.673-5.417-8.673a1.2 1.2 0 0 1 1.76-1.605L7.5 15.5zm6-6v2m-3-3.5v3.5m6-1v2"/>
+        </svg></div>
+        <a class="floating-header-share-tw" href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}"
+            onclick="window.open(this.href, 'share-twitter', 'width=550,height=235');return false;">
+            {{> "icons/twitter"}}
+        </a>
+        <a class="floating-header-share-fb" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
+            onclick="window.open(this.href, 'share-facebook','width=580,height=296');return false;">
+            {{> "icons/facebook"}}
+        </a>
+    </div>
+    <progress id="reading-progress" class="progress" value="0">
+        <div class="progress-container">
+            <span class="progress-bar"></span>
+        </div>
+    </progress>
+</div>
+
 
 {{/post}}
 
@@ -245,3 +234,6 @@ $(document).ready(function () {
 });
 </script>
 {{/contentFor}}
+
+<!-- 以上是從之前 Ghost 複製過來的 -->
+
