--- a/partials/components/navigation.hbs
+++ b/partials/components/navigation.hbs
@@ -35,15 +35,15 @@
                 <div class="gh-navigation-members">
                     {{#unless @member}}
                         {{#unless @site.members_invite_only}}
-                            <a href="#/portal/signin" data-portal="signin">Sign in</a>
+                            <a href="#/portal/signin" data-portal="signin">登入</a>
                             {{#unless hideSubscribeButton}}
-                                <a class="gh-button" href="#/portal/signup" data-portal="signup">Subscribe</a>
+                                <a class="gh-button" href="#/portal/signup" data-portal="signup">訂閱</a>
                             {{/unless}}
                         {{else}}
-                            <a class="gh-button" href="#/portal/signin" data-portal="signin">Sign in</a>
+                            <a class="gh-button" href="#/portal/signin" data-portal="signin">登入</a>
                         {{/unless}}
                     {{else}}
-                        <a class="gh-button" href="#/portal/account" data-portal="account">Account</a>
+                        <a class="gh-button" href="#/portal/account" data-portal="account">帳號</a>
                     {{/unless}}
                 </div>
             {{/unless}}
