add text decoration

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -47,6 +47,8 @@ production stylesheet in assets/built/screen.css
 
 */
 
+@import "../custom/custom.css";
+
 /* 1. Variables
 /* ---------------------------------------------------------- */
 
