--- a/post.hbs
+++ b/post.hbs
@@ -68,7 +68,7 @@
             target="_blank" title="Share on Twitter">按此在 Twitter 留言</a>
             或
             <a href="https://threads.net/intent/post?text=我想回應《{{title}}》這篇文章%20%40hanamizuki%0A{{encode url absolute="true"}}">按此在 Threads 留言</a>
-            ，我會回應你。
+            ，我會回應你 :)
         </div>
     </div>
 
