--- a/assets/custom/custom.css
+++ b/assets/custom/custom.css
@@ -4,14 +4,14 @@
     line-height: 22px;
     padding: 4px 2px 4px 2px;
     letter-spacing: 0;
-    background: white url("../custom/underline_hl.gif") repeat-x bottom;
+    background: white url("../custom/underline_yhl.gif") repeat-x bottom;
 }
 .gh-content em {
     text-decoration: none;
     font-style: normal;
     padding: 0 3px;
     padding-bottom: 3px;
-    background: url("../custom/underline_yhl.gif") repeat-x 120% 100%;
+    background: url("../custom/underline_hl.gif") repeat-x 120% 100%;
 }
 
 .gh-content s {
