--- a/assets/custom/custom.css
+++ b/assets/custom/custom.css
@@ -4,7 +4,7 @@
     line-height: 22px;
     padding: 4px 2px 4px 2px;
     letter-spacing: 0;
-    background: white url("../custom/underline_yhl.gif") repeat-x bottom;
+    background: url("../custom/underline_yhl.gif") repeat-x bottom;
 }
 .gh-content em {
     text-decoration: none;
